# dsnd-pipelines-project

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: reviews_processed.csv
notebooks/: 01_data_understanding.ipynb  02_data_preparation.ipynb  03_modelling.ipynb  04_deployment.ipynb
src/: setup.py
src/stylesense/: column_selectors.py  num_transformers.py  requirements.txt  text_transformers.py
tests/: test_environment.py  test_transformer.py
