[project]
name = "dsnd-pipelines-project"
version = "1.0.0"
description = "Data Science Pipeline Project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "en_core_web_sm",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
"en_core_web_sm" = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    '*/_generated_resources.py',
    '*-notebooks/*',
    '*/evaluatorLib/Lib/*'
]

[tool.ruff.lint]
extend-select = ["N", "E5", "I"]
ignore = ["N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
